# m36-t1

./: CMakeLists.txt  class.cpp  class.h  main.cpp
